force-app/main/default/objects/Account/fields/FNS_CustomerDescription__c.field-meta.xml
<CustomField>
    <fullName>FNS_CustomerDescription__c</fullName>
    <description>Customer Description</description>
    <label>Customer Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>