force-app/main/default/objects/Account/fields/FNS_CustomerExtId__c.field-meta.xml
<CustomField>
    <fullName>FNS_CustomerExtId__c</fullName>
    <description>Customer Id</description>
    <externalId>true</externalId>
    <label>Customer Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>