force-app/main/default/objects/Account/fields/FNS_CustomerStruct__c.field-meta.xml
<CustomField>
    <fullName>FNS_CustomerStruct__c</fullName>
    <label>Customer Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FNS_Structure</valueSetName>
    </valueSet>
</CustomField>