force-app/main/default/objects/Account/fields/FNS_GovernmentId__c.field-meta.xml
<CustomField>
    <fullName>FNS_GovernmentId__c</fullName>
    <label>Government Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>