force-app/main/default/objects/Account/fields/FNS_IdentityNumber__c.field-meta.xml
<CustomField>
    <fullName>FNS_IdentityNumber__c</fullName>
    <label>Identity Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>