force-app/main/default/objects/Account/fields/FNS_IdentityType__c.field-meta.xml
<CustomField>
    <fullName>FNS_IdentityType__c</fullName>
    <label>Identity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TIN</fullName>
            </value>
            <value>
                <fullName>Organization ID</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>