force-app/main/default/objects/Account/fields/FNS_ImportantNotes__c.field-meta.xml
<CustomField>
    <fullName>FNS_ImportantNotes__c</fullName>
    <label>Important Notes</label>
    <type>TextArea</type>
</CustomField>