force-app/main/default/objects/Account/fields/FNS_Naics__c.field-meta.xml
<CustomField>
    <fullName>FNS_Naics__c</fullName>
    <label>Naics</label>
    <length>40</length>
    <type>Text</type>
</CustomField>