force-app/main/default/objects/Account/fields/FNS_NAICSCode__c.field-meta.xml
<CustomField>
    <fullName>FNS_NAICSCode__c</fullName>
    <label>NAICS Code</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FNS_NAICSCode</valueSetName>
    </valueSet>
</CustomField>