force-app/main/default/objects/Account/fields/FNS_NAICSCodeSet1__c.field-meta.xml
<CustomField>
    <fullName>FNS_NAICSCodeSet1__c</fullName>
    <label>NAICS Code Set1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FNS_NAICSCode__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>FNS_NAICSCodeFirstLevel</valueSetName>
    </valueSet>
</CustomField>