force-app/main/default/objects/Account/fields/FNS_NAICSCodeSet3__c.field-meta.xml
<CustomField>
    <fullName>FNS_NAICSCodeSet3__c</fullName>
    <label>NAICS Code Set3</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>FNS_NAICSCode__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>FNS_NAICSCodeFirstLevelSet3</valueSetName>
    </valueSet>
</CustomField>