force-app/main/default/objects/Account/fields/FNS_NaicsDescription__c.field-meta.xml
<CustomField>
    <fullName>FNS_NaicsDescription__c</fullName>
    <label>Naics Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>