force-app/main/default/objects/Account/fields/FNS_OfficialLoan__c.field-meta.xml
<CustomField>
    <fullName>FNS_OfficialLoan__c</fullName>
    <label>Official Loan(Reg-O)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>