force-app/main/default/objects/Account/fields/FNS_OfficialType__c.field-meta.xml
<CustomField>
    <fullName>FNS_OfficialType__c</fullName>
    <label>Official Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>