force-app/main/default/objects/Account/fields/FNS_ReferredByContact__c.field-meta.xml
<CustomField>
    <fullName>FNS_ReferredByContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Referrer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (External Referrer)</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>