force-app/main/default/objects/Account/fields/FNS_ReferredByUser__c.field-meta.xml
<CustomField>
    <fullName>FNS_ReferredByUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Referrer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>