force-app/main/default/objects/Account/fields/FNS_RelationshipOfficer__c.field-meta.xml
<CustomField>
    <fullName>FNS_RelationshipOfficer__c</fullName>
    <label>Relationship Officer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>