force-app/main/default/objects/Account/fields/FNS_SICCode__c.field-meta.xml
<CustomField>
    <fullName>FNS_SICCode__c</fullName>
    <label>SIC</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FNS_SICCode</valueSetName>
    </valueSet>
</CustomField>