force-app/main/default/objects/Account/fields/FNS_SICCodeSet1__c.field-meta.xml
<CustomField>
    <fullName>FNS_SICCodeSet1__c</fullName>
    <label>SIC Code Set1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FNS_SubSICCodeSet1</valueSetName>
    </valueSet>
</CustomField>