force-app/main/default/objects/Account/fields/FNS_SICCodeSet2__c.field-meta.xml
<CustomField>
    <fullName>FNS_SICCodeSet2__c</fullName>
    <label>SIC Code Set2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FNS_SubSICCodeSet2</valueSetName>
    </valueSet>
</CustomField>