force-app/main/default/objects/Account/fields/FNS_TaxIdFlag__c.field-meta.xml
<CustomField>
    <fullName>FNS_TaxIdFlag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Id Flag</label>
    <type>Checkbox</type>
</CustomField>