force-app/main/default/objects/Account/recordTypes/FNS_Customer.recordType-meta.xml
<RecordType>
    <fullName>FNS_Customer</fullName>
    <active>true</active>
    <label>Customer</label>
</RecordType>